css/style.css
/* ... */
#main >:last-child {
	margin-bottom: 0;
}

#main .sidebar section {
	border-top: solid 1px rgba(124, 128, 129, 0.2);
	margin: 3em 0 0 0;
	padding: 3em 0 0 0;
}

#main .sidebar section:first-child {
	border-top: 0;
	padding-top: 0;
	margin-top: 0;
}

body.index #main {
	padding-top: 5em;
}

/* CTA */
#cta {
	background-attachment: scroll, scroll, scroll, fixed;
	background-image: url("../images/banner.jpg");
	background-image: url("images/ll.svg"), url("images/ll.svg"), url("images/overlay.png"), url("../images/banner.jpg");
	background-position: top left, top right, top left, bottom center;
	background-repeat: no-repeat, no-repeat, repeat, no-repeat;
	background-size: 25em, 25em, auto, cover;
	color: white;
	padding: 5em;
	text-align: center;
}

#cta header {
	margin-bottom: 2em;
}

/* Footer */
#footer {
	background: var(--color-light-background);
	color: var(--color-dark-background);
	padding: 5em 5em 10em 5em;
	text-align: center;
}

#footer .copyright {
	font-size: 0.8em;
	line-height: 1em;
}

#footer .copyright a {
	color: inherit;
}

#footer .copyright li {
	display: inline-block;
	margin-left: 1em;
	padding-left: 1em;
	border-left: dotted 1px;
}

#footer .copyright li:first-child {
	margin: 0;
	padding: 0;
	border: 0;
}

/* Layer */
#topButton .toggle {
	height: 100%;
	left: 0;
	position: absolute;
	text-align: center;
	top: 0;
	width: 100%;
}

#topButton .toggle:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	font-family: FontAwesome;
	font-style: normal;
	font-weight: normal;
	text-transform: none !important;
}

#topButton .toggle:before {
	color: white;
	content: '\f039';
	font-size: 0.75em;
	height: 30px;
	left: 0;
	line-height: 30px;
	opacity: 0.5;
	position: absolute;
	top: 0;
	width: 100%;
	z-index: 1;
}

#topButton .toggle:after {
	background: rgba(163, 169, 170, 0.75);
	border-radius: 0 0 4px 4px;
	content: '';
	height: 30px;
	left: 50%;
	margin-left: -40px;
	position: absolute;
	top: 0;
	width: 80px;
}

#sideButton .toggle {
	height: 100%;
	left: 0;
	position: absolute;
	text-align: center;
	top: 0;
	width: 100%;
}

#sideButton .toggle:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	font-family: FontAwesome;
	font-style: normal;
	font-weight: normal;
	text-transform: none !important;
}

#sideButton .toggle:before {
	color: white;
	content: '\f039';
	font-size: 1em;
	height: 40px;
	left: 10px;
	line-height: 40px;
	opacity: 0.5;
	position: absolute;
	top: 11px;
	width: 60px;
	z-index: 1;
}

#sideButton .toggle:after {
	background: rgba(163, 169, 170, 0.75);
	border-radius: 2px;
	content: '';
	height: 40px;
	left: 10px;
	position: absolute;
	top: 10px;
	width: 60px;
}

#topPanel,
#sidePanel {
	background: var(--color-dark-text);
	color: white;
	font-size: 0.8em;
	letter-spacing: 0.075em;
	text-transform: uppercase;
}

#topPanel nav,
#sidePanel nav {
	padding: 0.25em 0.5em 1em 0.5em;
}

#topPanel .link,
#sidePanel .link {
	border: 0;
	border-top: solid 1px rgba(255, 255, 255, 0.05);
	color: inherit;
	display: block;
	height: 3em;
	line-height: 3em;
	opacity: 0.75;
	text-decoration: none;
}

#topPanel .link.depth-0,
#sidePanel .link.depth-0 {
	font-weight: 900;
}

#topPanel .link:first-child,
#sidePanel .link:first-child {
	border-top: 0;
}

#topPanel .indent-1,
#sidePanel .indent-1 {
	display: inline-block;
	width: 1em;
}

#topPanel .indent-2,
#sidePanel .indent-2 {
	display: inline-block;
	width: 2em;
}

#topPanel .indent-3,
#sidePanel .indent-3 {
	display: inline-block;
	width: 3em;
}

#topPanel .indent-4,
#sidePanel .indent-4 {
	display: inline-block;
	width: 4em;
}

#topPanel .indent-5,
#sidePanel .indent-5 {
	display: inline-block;
	width: 5em;
}

/* team units navigation */
#unitsNav {
	margin-left: 45%;
}

/* Captions on images */
a {
	display: inline-block;
	position: relative;
}

.caption {
	opacity: 0;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	background-color: #fff;  /*var(--color-light-background);*/

	/* for browsers that don't understand rgba() notation */
	color: #000000;
	line-height: 1.1em;
	-webkit-transition: all 1s linear;
	-o-transition: all 1s linear;
	-ms-transition: all 1s linear;
	-moz-transition: all 1s linear;
	transition: all 1s linear;
	height: 100%;
	text-align: center;
	display: flex;
	justify-content: center; /* align horizontal */
	align-items: center;
}

a:hover .caption {
	opacity: 1;
	-webkit-transition: all 1s linear;
	-o-transition: all 1s linear;
	-ms-transition: all 1s linear;
	-moz-transition: all 1s linear;
	transition: all 1s linear;
}

​

/* Gallery */
.gallery-wrapper {
	width: 35em;
	text-align: center;
	padding: 1em 0 4em 0;
}

.gallery-best-image {
	max-height: 20em;
	max-width: 20em;
}

.gallery-image-wrapper {
	height: 300px;
	width: 300px;
	display: inline-block;
	margin: 1em;
	position: relative;
}

.gallery-image {
	margin: auto;
	position: absolute;
	top: 0px;
	bottom: 0px;
	max-height: 100%;
	max-width: 100%;
}

#newsGallery {
	text-align: center;
}

#donate {
	margin-top: 2em;
	text-align: center;
}

